--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,5 +1,5 @@
 steps:
-  - name: gcr.io/cloud-builders/mvn:3.5.0-jdk-8
+  - name: gcr.io/cloud-builders/mvn
     id: build
     args: ['clean', 'install', 'jib:build', '-Dimage=gcr.io/nih-test/cr-imagebox']
 
