--- a/pom.xml
+++ b/pom.xml
@@ -160,9 +160,12 @@
                 <artifactId>jib-maven-plugin</artifactId>
                 <version>2.0.0</version>
                 <configuration>
+                    <container>
+                        <mainClass>com.ebremer.imagebox.W3Cmf</mainClass>
                     <to>
                         <image>gcr.io/nih-test/imagebox-server</image>
                     </to>
+                   </container>
                 </configuration>
             </plugin>
         </plugins>
