--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -29,7 +29,7 @@ steps:
 
   - name: gcr.io/cloud-builders/mvn
     id: build
-    args: ['clean', 'install', 'jib:build', '-Dimage=eu.gcr.io/${PROJECT_ID}/${_IMAGE_NAME}']
+    args: ['clean', 'install', 'jib:build', '-Dimage=gcr.io/${PROJECT_ID}/${_IMAGE_NAME}']
     volumes:
       - name: m2
         path: /root/.m2/
@@ -50,12 +50,12 @@ steps:
         path: /root/.m2/
 
   # deploy to GKE
-  - name: 'gcr.io/cloud-builders/gke-deploy:stable'
-    waitFor:
-      - build
-    args:
-      - run
-      - --image=gcr.io/${PROJECT_ID}/${_IMAGE_NAME}:latest
-      - --location=us-west4
-      - --cluster=autopilot-cluster-1
-      - --expose=8080
+  #- name: 'gcr.io/cloud-builders/gke-deploy:stable'
+  #  waitFor:
+   #   - build
+  #  args:
+    #  - run
+   #   - --image=gcr.io/${PROJECT_ID}/${_IMAGE_NAME}:latest
+   #   - --location=us-west4
+   #   - --cluster=autopilot-cluster-1
+   #   - --expose=8080
