--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,61 +1,6 @@
-#steps:
-#  - name: gcr.io/cloud-builders/mvn
-#    id: build
-#    args: ['clean', 'install', 'jib:build', '-Dimage=gcr.io/nih-test/cr-imagebox']
-
-#timeout: "1600s"
-
-substitutions:
-  _IMAGE_NAME: imagebox-server # Configure this
-  _GCS_CACHE_BUCKET: imagebox-bucket-ds
-
 steps:
-
-  # load the cache from GCS if it exists
-  - name: gcr.io/cloud-builders/gsutil
-    dir: /root
-    entrypoint: bash
-    args:
-      - -c
-      - |
-        (
-          gsutil cp gs://${_GCS_CACHE_BUCKET}/m2-cache.tar.gz /tmp/m2-cache.tar.gz &&
-          tar -xzf /tmp/m2-cache.tar.gz
-        ) || echo 'Cache not found'
-    volumes:
-      - name: m2
-        path: /root/.m2/
-
-
   - name: gcr.io/cloud-builders/mvn
     id: build
-    args: ['clean', 'install', 'jib:build', '-Dimage=gcr.io/${PROJECT_ID}/${_IMAGE_NAME}']
-    volumes:
-      - name: m2
-        path: /root/.m2/
+    args: ['clean', 'install', 'jib:build', '-Dimage=gcr.io/nih-test/cr-imagebox']
 
-  # cache the /root/.m2 folder and upload it to GCS bucket
-  - name: gcr.io/cloud-builders/gsutil
-    waitFor:
-      - build
-    dir: /root
-    entrypoint: bash
-    args:
-      - -c
-      - |
-        tar -czf /tmp/m2-cache.tar.gz .m2 &&
-        gsutil cp /tmp/m2-cache.tar.gz gs://${_GCS_CACHE_BUCKET}/m2-cache.tar.gz
-    volumes:
-      - name: m2
-        path: /root/.m2/
-
-  # deploy to GKE
-  #- name: 'gcr.io/cloud-builders/gke-deploy:stable'
-  #  waitFor:
-   #   - build
-  #  args:
-    #  - run
-   #   - --image=gcr.io/${PROJECT_ID}/${_IMAGE_NAME}:latest
-   #   - --location=us-west4
-   #   - --cluster=autopilot-cluster-1
-   #   - --expose=8080
+timeout: "1600s"
