--- a/pom.xml
+++ b/pom.xml
@@ -64,7 +64,7 @@
         </dependency>
         <dependency>
             <groupId>org.eclipse.jetty</groupId>
-            <artifactId>jetty-util</artifactId>
+            <artifactId>jetty-server</artifactId>
             <version>9.4.33.v20201020</version>
         </dependency>
         <dependency>
