--- a/pom.xml
+++ b/pom.xml
@@ -69,6 +69,18 @@
             <type>jar</type>
             <scope>compile</scope>
         </dependency>
+
+        <!-- Embedded Jetty dependencies -->
+        <dependency>
+            <groupId>org.eclipse.jetty</groupId>
+            <artifactId>jetty-server</artifactId>
+            <version>9.4.36.v20210114</version>
+        </dependency>
+        <dependency>
+            <groupId>org.eclipse.jetty</groupId>
+            <artifactId>jetty-util</artifactId>
+            <version>9.4.36.v20210114</version>
+        </dependency>
     </dependencies>
     <build>
         <resources>
