--- a/pom.xml
+++ b/pom.xml
@@ -58,7 +58,7 @@
             <exclusions>
             <exclusion>
                 <groupId>org.slf4j</groupId>
-                <artifactId>slf4j-log4j12</artifactId>
+                <artifactId>slf4j-api</artifactId>
             </exclusion>
             </exclusions>
         </dependency>
