--- a/pom.xml
+++ b/pom.xml
@@ -33,7 +33,7 @@
             <version>3.16.0</version>
             <type>jar</type>
         </dependency>
-        <dependency>
+     <!--   <dependency>
             <groupId>ch.qos.logback</groupId>
             <artifactId>logback-classic</artifactId>
             <version>1.2.3</version>
@@ -43,7 +43,7 @@
                 <artifactId>slf4j-log4j12</artifactId>
             </exclusion>
             </exclusions>
-        </dependency>
+        </dependency>-->
         <dependency>
             <groupId>ome</groupId>
             <artifactId>formats-gpl</artifactId>
