--- a/pom.xml
+++ b/pom.xml
@@ -15,12 +15,6 @@
             <groupId>ch.qos.logback</groupId>
             <artifactId>logback-classic</artifactId>
             <version>1.2.3</version>
-            <exclusions>
-            <exclusion>
-                <groupId>org.slf4j</groupId>
-                <artifactId>slf4j-log4j12</artifactId>
-            </exclusion>
-            </exclusions>
         </dependency>
         <dependency>
             <groupId>ome</groupId>
@@ -59,7 +53,7 @@
             <type>jar</type>
             <scope>compile</scope>
         </dependency>
-        <!-- Embedded Jetty dependencies -->
+        <!-- Embedded Jetty server  -->
         <dependency>
             <groupId>org.eclipse.jetty</groupId>
             <artifactId>jetty-server</artifactId>
