trial with blackListed datastore with env varaibles -1.

--- a/pom.xml
+++ b/pom.xml
@@ -144,7 +144,7 @@
                 <version>2.0.0</version>
                 <configuration>
                     <to>
-                        <image>gcr.io/nih-test/imagebox</image>
+                        <image>gcr.io/nih-test/imagebox-env</image>
                     </to>
 
                 </configuration>
